# face_mnn

./: README.md  build.gradle  settings.gradle
FaceLibrary/: CMakeLists.txt  build.gradle  proguard-rules.pro
FaceLibrary/src/main/: AndroidManifest.xml
FaceLibrary/src/main/cpp/: UltraFace.cpp  UltraFace.hpp  base_util.cpp  base_util.h  face_jni.cpp
FaceLibrary/src/main/java/com/zl/face/: FaceDetector.java  FaceInfo.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zl/demo/: CameraActivity.java  Constant.java  MainActivity.java
app/src/main/java/com/zl/demo/util/: ImageUtil.java  YUVUtil.java
app/src/main/java/com/zl/demo/widget/: CameraPreView.java  FaceRectView.java  IRCameraHelper.java  RectView.java
app/src/main/res/layout/: activity_camera.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
